syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "contract/proto;proto";

service UserService {
  rpc Create(UserInput) returns (User);
  rpc Update(UserUpdate) returns (User);
  rpc Get(UserID) returns (User);
  rpc List(ListRequest) returns (Users);
  rpc Delete(UserID) returns (google.protobuf.Empty);
}

message UserID {
  string id = 1;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string nickname = 4;
  string email = 5;
  string country = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message UserInput {
  string first_name = 1;
  string last_name = 2;
  string nickname = 3;
  string email = 4;
  string country = 5;
  string password = 6;
}

message UserUpdate {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string nickname = 4;
  string email = 5;
  string country = 6;
  string password = 7;
}

message Users {
  repeated User users = 1;
  int64 total_count = 2;
  int64 next_page = 3;
}

message ListRequest {
  int64 page = 1;
  int64 limit = 2;
  string country = 3;
}
